added a cachelist endpoint for regular ui users
